--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
       <div class="about">
         <div class="container">
           <div class="row">
-            <div class="main-head mb-5">
+            <div class="main-head mb-lg-5">
               <h1 class="text-center m-auto mb-5 mt-lg-5">about me</h1>
             </div>
           </div>
@@ -110,7 +110,7 @@
         <div class="container">
           <div class="row">
             <div class="main-head mb-5">
-              <h1 class="mb-5 mt-lg-5">WORK EXPERIENCE</h1>
+              <h1 class="mb-lg-5 mt-lg-5 mt-5">WORK EXPERIENCE</h1>
             </div>
           </div>
           <div class="row mt-5">
@@ -178,7 +178,7 @@
           <div class="container">
             <div class="row">
               <div class="main-head mb-5">
-                <h1 class="mb-5 mt-lg-5">EDUCATION</h1>
+                <h1 class="mb-lg-5 mt-lg-5 mt-5">EDUCATION</h1>
               </div>
             </div>
             <div class="row mt-5">
