--- a/contact.html
+++ b/contact.html
@@ -72,8 +72,8 @@
       <div class="contact">
         <div class="container">
           <div class="row">
-            <div class="main-head mb-5">
-              <h1 class="mb-5 mt-lg-5">contact me</h1>
+            <div class="main-head mb-lg-5">
+              <h1 class="mb-lg-5 mt-lg-5">contact me</h1>
             </div>
           </div>
           <div class="row form-contact">
@@ -125,7 +125,9 @@
                 <img class="img-fluid" src="images/tele.png" alt="" />
               </div> -->
               <div class="person">
-                <img class="img-fluid" src="images/contact.png" alt="" />
+                <div class="text-end">
+                  <img class="img-fluid" src="images/contact.png" alt="" />
+                </div>
               </div>
             </div>
           </div>
