--- a/portfolio.html
+++ b/portfolio.html
@@ -70,13 +70,13 @@
         <div class="landing">
           <div class="container">
             <div class="row">
-              <div class="main-head mt-5 mb-5">
-                <h1 class="text-start mb-5 mt-lg-3">portfolio</h1>
+              <div class="main-head mt-5 mb-lg-5">
+                <h1 class="text-start mb-lg-5 mt-lg-3">portfolio</h1>
               </div>
             </div>
           </div>
         </div>
-        <div class="image" id="scroll">
+        <div class="image">
           <div class="container">
             <div class="row">
               <div class="main-head mt-5">
@@ -143,6 +143,79 @@
                       <div class="skills-items">
                         <div class="progress">
                           <div class="progress-in" style="width: 92%"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="person-info-last">
+                <div class="row">
+                  <div
+                    class="col-lg-6 col-md-6 col-sm-6 text-lg-start text-sm-center text-center">
+                    <div class="tools">
+                      <div class="mb-3">
+                        <h1>Figma</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 94%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <h1>Adobe XD</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 94%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <h1>After Effects</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 93%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <h1>Photoshop</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 94%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <h1>Premiere Pro</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 96%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <h1>Adobe Illustrator</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 95%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <h1>3D Blender</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 96%"></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3 pb-5">
+                        <h1>Mobile development (Flutter)</h1>
+                        <div class="skills-items">
+                          <div class="progress">
+                            <div class="progress-in" style="width: 91%"></div>
+                          </div>
                         </div>
                       </div>
                     </div>
