--- a/social.html
+++ b/social.html
@@ -69,7 +69,7 @@
       <div class="social">
         <div class="container">
           <div class="row">
-            <div class="main-head mb-5">
+            <div class="main-head mb-lg-5">
               <h1 class="mt-lg-5">social media</h1>
             </div>
             <div class="follow">
