--- a/team.html
+++ b/team.html
@@ -27,40 +27,40 @@
       <div class="side-bar">
         <ul class="list-unstyled">
           <li class="home-icon">
-            <div class="info-home info d-none">
-              <a rel="noopener" href="index.html">Home</a>
-            </div>
-            <i class="fa-solid fa-house"></i>
+            <div class="info">Home</div>
+            <a rel="noopener" href="index.html">
+              <i class="fa-solid fa-house"></i
+            ></a>
           </li>
           <li class="about-icon">
-            <div class="info-about info d-none">
-              <a rel="noopener" href="about.html">About</a>
-            </div>
-            <i style="margin-left: 2px" class="fa-solid fa-user"></i>
+            <div class="info">About</div>
+            <a rel="noopener" href="about.html">
+              <i style="margin-left: 2px" class="fa-solid fa-user"></i
+            ></a>
           </li>
           <li class="portfolio-icon">
-            <div class="info-portfolio info d-none">
-              <a rel="noopener" href="portfolio.html">Portfolio</a>
-            </div>
-            <i class="fa-solid fa-palette"></i>
+            <div class="info-portfolio info">Portfolio</div>
+            <a rel="noopener" href="portfolio.html"
+              ><i class="fa-solid fa-palette"></i
+            ></a>
           </li>
           <li class="social-icon">
-            <div class="info-social info d-none">
-              <a rel="noopener" href="social.html">Social Media</a>
-            </div>
-            <i class="fa-solid fa-share-nodes"></i>
+            <div class="info-social info">Social Media</div>
+            <a rel="noopener" href="social.html">
+              <i class="fa-solid fa-share-nodes"></i
+            ></a>
           </li>
           <li class="contact-icon">
-            <div class="info-contact info d-none">
-              <a rel="noopener" href="contact.html">Contact</a>
-            </div>
-            <i class="fa-solid fa-paper-plane"></i>
+            <div class="info">Contact</div>
+            <a rel="noopener" href="contact.html"
+              ><i class="fa-solid fa-paper-plane"></i
+            ></a>
           </li>
           <li class="team-icon active">
-            <div class="info-team info d-none">
-              <a rel="noopener" href="team.html">Team</a>
-            </div>
-            <i class="fa-solid fa-users"></i>
+            <div class="info-team info">Team</div>
+            <a rel="noopener" href="team.html">
+              <i class="fa-solid fa-users"></i
+            ></a>
           </li>
         </ul>
       </div>
@@ -69,8 +69,8 @@
       <div class="team">
         <div class="container">
           <div class="row">
-            <div class="main-head mb-5">
-              <h1 class="mb-5 mt-lg-5 mt-5">professional team</h1>
+            <div class="main-head mb-lg-5">
+              <h1 class="mb-lg-5 mt-lg-5 mt-5">professional team</h1>
             </div>
           </div>
           <div class="row mt-5 text-center">
