--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
         <div class="container">
           <div class="row">
             <div class="main-head mb-lg-5">
-              <h1 class="mb-lg-5 mt-lg-5">contact me</h1>
+              <h1 class="mb-5 mt-lg-5">contact me</h1>
             </div>
           </div>
           <div class="row form-contact">
