--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
       <div class="contact">
         <div class="container">
           <div class="row">
-            <div class="main-head mb-lg-5">
+            <div class="main-head mb-5">
               <h1 class="mb-5 mt-lg-5">contact me</h1>
             </div>
           </div>
