--- a/contact.html
+++ b/contact.html
@@ -1,81 +1,155 @@
-/* start contact */
-.contact {
-  padding-top: 50px;
-}
-form input,
-textarea {
-  background-color: transparent !important;
-  border: 1px solid #aebed7 !important;
-  border-radius: 10px !important;
-}
-.btn-form {
-  width: 100%;
-  padding: 15px;
-  background-color: white;
-  color: black !important;
-  border-radius: 10px !important;
-  font-weight: 600;
-}
-::placeholder {
-  font-weight: 600;
-  font-size: 17px;
-}
-.person {
-  margin: auto;
-}
-.done {
-  margin-top: -100px;
-}
-.done img {
-  width: 250px;
-}
-.done button {
-  width: 200px;
-}
-/* end contact */
-/*start responsive */
-@media (min-width: 991px) {
-  .person {
-    position: relative;
-    margin-top: -80px;
-    width: 400px;
-  }
-}
-@media (max-width: 868px) {
-  form {
-    margin: auto !important;
-    width: 95%;
-  }
-}
-@media (max-width: 768px) {
-  .all {
-    height: 130vh;
-  }
-  .person {
-    display: none;
-  }
-  .done {
-    margin-top: -50px;
-  }
-  .done h1 {
-    font-size: 20px;
-  }
-  .done img {
-    width: 120px;
-  }
-  .done button {
-    padding: 5px;
-  }
-}
-@media (max-width: 668px) {
-  .all {
-    height: 120vh;
-  }
-  form {
-    margin-left: 10px;
-    margin: auto !important;
-    width: 80%;
-  }
-}
-
-/*end responsive */
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <title>Contact</title>
+    <link rel="icon" href="images/logo.png" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/contact.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Quicksand:wght@500;600;700&display=swap"
+      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Montserrat:wght@100;500;700&family=Nosifer&family=Pacifico&family=Quicksand:wght@500;600;700&family=Vast+Shadow&display=swap"
+      rel="stylesheet" />
+  </head>
+  <body>
+    <div class="all">
+      <!-- start side-bar -->
+      <div class="side-bar">
+        <ul class="list-unstyled">
+          <li class="home-icon">
+            <div class="info">Home</div>
+            <a rel="noopener" href="index.html">
+              <i class="fa-solid fa-house"></i
+            ></a>
+          </li>
+          <li class="about-icon">
+            <div class="info">About</div>
+            <a rel="noopener" href="about.html">
+              <i style="margin-left: 2px" class="fa-solid fa-user"></i
+            ></a>
+          </li>
+          <li class="portfolio-icon">
+            <div class="info-portfolio info">Portfolio</div>
+            <a rel="noopener" href="portfolio.html"
+              ><i class="fa-solid fa-palette"></i
+            ></a>
+          </li>
+          <li class="social-icon">
+            <div class="info-social info">Social Media</div>
+            <a rel="noopener" href="social.html">
+              <i class="fa-solid fa-share-nodes"></i
+            ></a>
+          </li>
+          <li class="contact-icon active">
+            <div class="info">Contact</div>
+            <a rel="noopener" href="contact.html"
+              ><i class="fa-solid fa-paper-plane"></i
+            ></a>
+          </li>
+          <li class="team-icon">
+            <div class="info-team info">Team</div>
+            <a rel="noopener" href="team.html">
+              <i class="fa-solid fa-users"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <!-- end side-bar -->
+      <!-- start contact -->
+      <div class="contact">
+        <div class="container">
+          <div class="row">
+            <div class="main-head mb-5">
+              <h1 class="mb-5 mt-lg-5">contact me</h1>
+            </div>
+          </div>
+          <div class="row form-contact">
+            <div class="col-lg-6 col-md-6 col-sm-12 after">
+              <form class="row g-3" id="form">
+                <div class="col-md-6">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="first-name"
+                    name="first-name"
+                    placeholder="First Name"
+                    required />
+                </div>
+                <div class="col-md-6">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="last-name"
+                    name="last-name"
+                    placeholder="Last Name"
+                    required />
+                </div>
+                <div class="col-md-12">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    name="email"
+                    placeholder="Email"
+                    required />
+                </div>
+                <div class="col-12">
+                  <textarea
+                    class="form-control"
+                    id="textarea"
+                    name="textarea"
+                    rows="5"
+                    placeholder="Please drop a message"
+                    required></textarea>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn-form mb-5">Submit</button>
+                </div>
+              </form>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 after">
+              <div class="person">
+                <div class="text-end">
+                  <img class="img-fluid" src="images/contact.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="done text-center d-none wow animate bounceInDown">
+              <img class="img-fluid" src="images/done.png" alt="" />
+              <h1>Submitted Successfully</h1>
+              <p>
+                We received your details will connect you sooner, please be
+                patient.
+              </p>
+              <button class="btn-form close mb-5">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end contact -->
+    </div>
+    <script src="js/all.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+    <script src="js/main.js"></script>
+    <script src="js/all.js"></script>
+  </body>
+</html>
