--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
           <div class="container">
             <div class="row">
               <div class="main-head mt-5">
-                <h1 class="text-start">software</h1>
+                <h1 class="text-start mt-3">software</h1>
               </div>
               <div class="group-one">
                 <img class="img-fluid" src="images/Group 4.png" alt="" />
@@ -166,7 +166,7 @@
                         <h1>Adobe XD</h1>
                         <div class="skills-items">
                           <div class="progress">
-                            <div class="progress-in" style="width: 94%"></div>
+                            <div class="progress-in" style="width: 75%"></div>
                           </div>
                         </div>
                       </div>
@@ -174,7 +174,7 @@
                         <h1>After Effects</h1>
                         <div class="skills-items">
                           <div class="progress">
-                            <div class="progress-in" style="width: 93%"></div>
+                            <div class="progress-in" style="width: 85%"></div>
                           </div>
                         </div>
                       </div>
@@ -190,7 +190,7 @@
                         <h1>Premiere Pro</h1>
                         <div class="skills-items">
                           <div class="progress">
-                            <div class="progress-in" style="width: 96%"></div>
+                            <div class="progress-in" style="width: 70%"></div>
                           </div>
                         </div>
                       </div>
@@ -214,7 +214,7 @@
                         <h1>Mobile development (Flutter)</h1>
                         <div class="skills-items">
                           <div class="progress">
-                            <div class="progress-in" style="width: 91%"></div>
+                            <div class="progress-in" style="width: 65%"></div>
                           </div>
                         </div>
                       </div>
