--- a/team.html
+++ b/team.html
@@ -79,7 +79,7 @@
                 <img class="img-fluid" src="images/al.jpg" alt="" />
               </div>
               <h1 class="sub-title">Almhmdy Ibrahim</h1>
-              <p class="date text-white-50 mb-3">Graphic designer</p>
+              <p class="date text-white-50 mb-3">Graphic Designer</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 mb-3">
               <div class="item">
