--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
               <div class="item">
                 <img class="img-fluid" src="images/al.jpg" alt="" />
               </div>
-              <h1 class="sub-title">Almhmdy Ibrahim</h1>
+              <h1 class="sub-title">Almohamedy Ebrahim</h1>
               <p class="date text-white-50 mb-3">Graphic Designer</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 mb-3">
